# saunastein2

./: .gitignore  AGENTS.md  AGENTS.md.txt  CMakeLists.txt  README.md  engine.stkpkg  package-lock.json  package.json  stakeforge.sln.licenseheader
assets/engine/fonts/: icons.stkfont  roboto.stkfont  vt323.stkfont
assets/engine/shaders/: bone.hlsl  (+10 more)
saunastein/assets/: phymat_default.stkphy
src/: sfg_api.cpp  sfg_api.hpp
src/app/: app.cpp  app.hpp  debug_console.cpp  debug_console.hpp  debug_controller.cpp  debug_controller.hpp  engine_resources.cpp  engine_resources.hpp  game.cpp  game.hpp  game_app.cpp  game_app.hpp  main.cpp  package.cpp  package.hpp  package_manager.cpp  package_manager.hpp
src/audio/: audio_manager.cpp  audio_manager.hpp
src/common/: packed_size.cpp  packed_size.hpp  pch.hpp  size_definitions.hpp  string_id.cpp  string_id.hpp  system_info.cpp  system_info.hpp  type_id.hpp  types.hpp
src/data/: array.hpp  atomic.hpp  binary_semaphore.hpp  bitmask.hpp  char_util.cpp  char_util.hpp  hash.cpp  hash.hpp  hash_map.hpp  istream.cpp  istream.hpp  istream_vector.hpp  mutex.hpp  ostream.cpp  ostream.hpp  ostream_vector.hpp  pair.hpp  queue.hpp  raw_stream.cpp  raw_stream.hpp  span.hpp  static_vector.hpp  string.hpp  string_util.cpp  string_util.hpp  string_view.hpp  vector.hpp  vector_util.hpp
src/editor/: editor.cpp  editor.hpp  editor_camera.cpp  editor_camera.hpp  editor_first_person_controller.cpp  editor_first_person_controller.hpp  editor_layout.cpp  editor_layout.hpp  editor_settings.cpp  editor_settings.hpp  editor_theme.cpp  editor_theme.hpp
src/game/: app_defines.hpp  game.cpp  game.hpp  game_max_defines.hpp  game_world_renderer.cpp  game_world_renderer.hpp  gameplay.cpp  gameplay.hpp  gameplay_toni.cpp  player_ui.cpp  player_ui.hpp
src/gfx/: buffer.cpp  buffer.hpp  buffer_queue.cpp  buffer_queue.hpp  camera.cpp  camera.hpp  draw_stream.cpp  draw_stream.hpp  engine_shaders.cpp  engine_shaders.hpp  imgui_renderer.cpp  imgui_renderer.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  shared_cbv.cpp  shared_cbv.hpp  texture_queue.cpp  texture_queue.hpp
src/gui/: gui_builder.cpp  gui_builder.hpp  icon_defs.hpp  vekt.cpp  vekt.hpp  vekt_defines.hpp  vekt_gui_builder.cpp  vekt_gui_builder.hpp
src/input/: input_common.hpp  input_mappings.hpp
src/io/: assert.hpp  file_system.cpp  file_system.hpp  log.cpp  log.hpp  simple_file_watcher.cpp  simple_file_watcher.hpp
src/math/: aabb.cpp  aabb.hpp  color.cpp  color.hpp  color_utils.cpp  color_utils.hpp  easing.cpp  easing.hpp  frustum.cpp  frustum.hpp  math.cpp  math.hpp  math_common.hpp  matrix3x3.cpp  matrix3x3.hpp  matrix4x3.cpp  matrix4x3.hpp  matrix4x4.cpp  matrix4x4.hpp  plane.cpp  plane.hpp  quat.cpp  quat.hpp  random.cpp  random.hpp  vector2.cpp  vector2.hpp  vector2h.cpp  vector2h.hpp  vector2i.cpp  vector2i.hpp  vector2i16.cpp  vector2i16.hpp  vector2ui.cpp  vector2ui.hpp  vector2ui16.cpp  vector2ui16.hpp  vector3.cpp  vector3.hpp  vector3h.cpp  (+11 more)
src/memory/: bump_allocator.cpp  bump_allocator.hpp  bump_text_allocator.cpp  bump_text_allocator.hpp  chunk_allocator.cpp  chunk_allocator.hpp  chunk_handle.hpp  double_buffered_swap.cpp  double_buffered_swap.hpp  malloc_allocator_map.hpp  malloc_allocator_stl.hpp  memory.cpp  memory.hpp  memory_tracer.cpp  memory_tracer.hpp  pool_allocator.cpp  pool_allocator.hpp  pool_allocator16.cpp  pool_allocator_gen.cpp  pool_allocator_gen.hpp  pool_allocator_simple.cpp  pool_allocator_simple.hpp  pool_handle.hpp  static_array.cpp  static_array.hpp  static_pool_allocator.cpp  static_pool_allocator.hpp  text_allocator.cpp  text_allocator.hpp
src/physics/: common_physics.cpp  common_physics.hpp  physics_bp_layer_interface.cpp  physics_bp_layer_interface.hpp  physics_character_contact_listener.hpp  physics_contact_listener.cpp  physics_contact_listener.hpp  physics_convert.cpp  physics_convert.hpp  physics_debug_renderer.cpp  physics_debug_renderer.hpp  physics_layer_filter.cpp  physics_layer_filter.hpp  physics_material_settings.cpp  physics_material_settings.hpp  physics_object_bp_layer_filter.cpp  physics_object_bp_layer_filter.hpp  physics_ray_collector.cpp  physics_ray_collector.hpp  physics_ray_result.cpp  physics_ray_result.hpp  physics_types.hpp  physics_world.cpp  physics_world.hpp  physics_world_character_contact_listener.cpp  physics_world_character_contact_listener.hpp  physics_world_contact_listener.cpp  physics_world_contact_listener.hpp
src/platform/: process.hpp  time.hpp  window.hpp  window_common.hpp
src/project/: engine_data.cpp  engine_data.hpp  project.cpp  project.hpp
src/reflection/: common_reflection.hpp  component_reflection.hpp  reflection.cpp  reflection.hpp  resource_reflection.hpp  trait_reflection.hpp  type_reflection.hpp
src/resources/: anim_state_machine.cpp  anim_state_machine.hpp  anim_state_machine_raw.cpp  anim_state_machine_raw.hpp  animation.cpp  animation.hpp  animation_common.cpp  animation_common.hpp  animation_raw.cpp  animation_raw.hpp  audio.cpp  audio.hpp  audio_raw.cpp  audio_raw.hpp  common_resources.cpp  common_resources.hpp  common_skin.cpp  common_skin.hpp  entity_template.cpp  entity_template.hpp  entity_template_raw.cpp  entity_template_raw.hpp  entity_template_utils.cpp  entity_template_utils.hpp  font.cpp  font.hpp  font_raw.cpp  font_raw.hpp  light_raw.cpp  light_raw.hpp  material.cpp  material.hpp  material_raw.cpp  material_raw.hpp  mesh.cpp  mesh.hpp  mesh_raw.cpp  mesh_raw.hpp  model.cpp  model.hpp  (+51 more)
src/serialization/: compressor.cpp  compressor.hpp  endianness.cpp  endianness.hpp  serialization.cpp  serialization.hpp
src/world/: common_entity.cpp  common_entity.hpp  common_world.hpp  component_manager.cpp  component_manager.hpp  entity_manager.cpp  entity_manager.hpp  time_manager.cpp  time_manager.hpp  trait_manager.cpp  trait_manager.hpp  world.cpp  world.hpp  world_constants.hpp  world_debug_rendering.cpp  world_debug_rendering.hpp  world_listener.cpp  world_listener.hpp  world_max_defines.hpp  world_resources.cpp  world_resources.hpp  world_screen.cpp  world_screen.hpp
(+513 files in other folders)
